--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel serve src/index.njk",
-    "build": "parcel build src/index.njk"
+    "build": "parcel build src/index.njk",
+    "deploy": "parcel build src/index.njk && gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
