--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel serve src/index.njk",
-    "build": "parcel build src/index.njk",
-    "deploy": "parcel build src/index.njk && gh-pages -d dist"
+    "build": "parcel build src/index.njk  && node bin/copy.js",
+    "deploy": "parcel build src/index.njk && node bin/copy.js && gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -18,8 +18,15 @@
   },
   "dependencies": {
     "gh-pages": "^2.2.0",
+    "i": "^0.3.6",
     "jquery": "^3.4.1",
+    "npm": "^6.13.7",
     "parcel-bundler": "^1.12.4",
     "scrollmagic": "^2.0.7"
+  },
+  "staticFiles": {
+    "staticPath": [
+      "src/CNAME"
+    ]
   }
 }
